# megaminx

./: .gitignore  ALL_BUILD.vcxproj  CMakeLists.txt  CMakeSettings.json  CMakeSettings.json-windows  CppProperties.json  CppProperties.json-windows  Makefile  Makefile.old  MegaMinx2-Debug-Win32.vgdbsettings  MegaMinx2-Debug-Win64.vgdbsettings  MegaMinx2-Debug.vgdbsettings  MegaMinx2-Release-win32.vgdbsettings  MegaMinx2-Release-win64.vgdbsettings  MegaMinx2-Release.vgdbsettings  MegaMinx2.cbp  MegaMinx2.project  MegaMinx2.sln  MegaMinx2.sublime-project  MegaMinx2.vcxproj  MegaMinx2.vcxproj.filters  MegaMinx2.workspace  Megaminx  Megaminx.SAVEGAME (copy 1).txt  Piece.cpp  README.md  Res.rc  ZERO_CHECK.vcxproj  build.ninja  debug-win32.mak  debug-win64.mak  debug.mak  debug.mak.old  gcc_Debug-Win32.h  gcc_Debug-Win64.h  gcc_Release-win32.h  gcc_Release-win64.h  gcc_Release.h  history.txt  main.cpp  (+11 more)
.github/workflows/: cmake-multi-platform.yml
common_physics/: camera.cpp  camera.h  collision_shapes.h  geometry.h  input.cpp  input.h  material_point.h  opengl.cpp  point_sets.h  raytri.cpp  rigid_body.h  utils.h  utils_math.h  utils_shaders.h
doc/: Algorithms.txt  Birds-Eye-Overview.md  ClassDiagram.cd  Layer7explanation.txt  Megaminx-perf-trace.txt  algo-test-modBy.txt  functions-face.txt  functions-shadow.txt  glu-error.txt  history.txt  lddtree.txt  megaminx-cppcheck-report1.txt  megaminx.cppcheck  oldideas.txt  solver-history-50000.txt
enc_temp_folder/9d2de2eee5247f9646bb6bae233cb1/: solve.cpp
engine/: center.cpp  center.h  color.h  corner.cpp  corner.h  edge.cpp  edge.h  face.cpp  face.h  geometry.h  megaminx.cpp  megaminx.h  piece.h  utils.cpp  vector3d.h
src/: .editorconfig  Res.rc  cppcheck-report-1.xml  main-menu.cpp  main-menu.hpp  main.cpp  main.h  readline.cpp
src/common_physics/: camera.cpp  camera.h  opengl.cpp  opengl.h  utils.h
src/engine/: algo-menu.hpp  algorithms.hpp  center.cpp  center.h  center.hpp  color.h  corner.cpp  corner.h  corner.hpp  edge.cpp  edge.h  edge.hpp  face.cpp  face.h  face.hpp  load.cpp  load.hpp  megaminx.cpp  megaminx.h  megaminx.hpp  piece-color.hpp  piece-static.hpp  piece.h  piece.hpp  shadow.cpp  solve.cpp  utils.cpp
src/ui/: camera.cpp  camera.h  camera.hpp  linenoise.c  linenoise.h  menu.cpp  mouse-ray.cpp  mouse-ray.hpp  opengl.cpp  opengl.h  utils_math.h
src/unused/: const_math.hpp  geometry.h  mouse-ray.cpp  mouse-ray.hpp  utils_math.h  vector3d.h
tests/: 50000-solves-debug-log.txt-sorted-uniq.txt
tests-old/: oldformat-vs-newformat.txt
